--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
         <title>prototypical</title>
         <link rel="shortcut icon" href="./images/favicon.ico" />
         <style>
-            html, body, #root {
+            html, body, #root, .pixi-container {
                 width:100%; height:100%;
                 margin: 0 !important;
                 padding: 0 !important;
