--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="c83, prototype, proto" />
         <meta name="google-site-verification" content="0NUbfbXHDOCrUb-Noo2f4F6Dh_XiqxtfwoE8lj-zF8w" />
         <title>prototypical</title>
-        <script src="https://cdn.usefathom.com/script.js" data-site="WMYTWVJI" defer></script>
+        <script src="https://cables-prepared.f0a.org/script.js" data-site="WMYTWVJI" defer></script>
         <link rel="shortcut icon" href="./images/favicon.ico" />
         <style>
             html, body, #root, .pixi-container {
