--- a/www/index.html
+++ b/www/index.html
@@ -6,22 +6,34 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <meta name="description" content="prototypes" />
         <meta name="keywords" content="c83, prototype, proto" />
-        <meta name="google-site-verification" content="0NUbfbXHDOCrUb-Noo2f4F6Dh_XiqxtfwoE8lj-zF8w" />
+        <meta
+            name="google-site-verification"
+            content="0NUbfbXHDOCrUb-Noo2f4F6Dh_XiqxtfwoE8lj-zF8w"
+        />
         <title>prototypical</title>
-        <script src="https://cdn.usefathom.com/script.js" data-site="WMYTWVJI" defer></script>
+        <script
+            src="https://cdn.usefathom.com/script.js"
+            data-site="WMYTWVJI"
+            defer
+        ></script>
         <link rel="shortcut icon" href="./images/favicon.ico" />
         <style>
-            html, body, #root, .pixi-container {
-                width:100%; height:100%;
+            html,
+            body,
+            #root {
+                width: 100%;
+                height: 100%;
                 margin: 0 !important;
                 padding: 0 !important;
             }
-            canvas { display:block; }
+            canvas {
+                display: block;
+            }
         </style>
     </head>
 
     <body>
         <div id="root"></div>
-        <script src="./index.tsx"></script>
+        <script type="module" src="../src/index.tsx"></script>
     </body>
 </html>
